--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ on: [push, pull_request]
 jobs:
     build:
         runs-on: ubuntu-latest
+        container: mcr.microsoft.com/playwright:v1.21.0-focal
         steps:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
@@ -22,3 +23,4 @@ jobs:
               run: npm test
               env:
                   PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+                  PERCY_BROWSER_EXECUTABLE: /usr/bin/chromium-browser
