--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "test": "percy exec -- playwright test --reporter=dot"
+    "test": "percy exec -- playwright test"
   },
   "dependencies": {
     "todomvc-app-css": "^2.3.0"
